[package]
name = "dune-cli"
version = "0.1.0"
edition = "2021"
authors = ["0xrusowsky"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5.16", features = ["env", "derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_urlencoded = "0.7.1"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
